chore: add font and apollo and graphql packages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/webp" href="/src/assets/bulbsum.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bulbsum</title>
+    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,300,400&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
