chore: add meta data and change cv

--- a/index.html
+++ b/index.html
@@ -3,8 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/webp" href="/src/assets/bulbsum.webp" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bulbsum</title>
+    <meta name="og:site_name" content="Gerardo Garcia" />
+    <meta
+      name="description"
+      content="Front-end developer excited to collaborate with teams that share my passion for programming, strive to promote personal growth, and seek to use their skills to make a positive impact through the development of innovative products and services."
+    />
+
+    <meta itemProp="name" content="Portfolio" />
+    <meta
+      itemProp="description"
+      content="Front-end developer excited to collaborate with teams that share my passion for programming, strive to promote personal growth, and seek to use their skills to make a positive impact through the development of innovative products and services."
+    />
+    <meta
+      itemProp="image"
+      content="https://res.cloudinary.com/dbs2uhton/image/upload/v1686791156/backgroundPortfolio_bsc19e.png"
+    />
+
+    <meta
+      property="og:url"
+      content="https://portfolio-gerardo.vercel.app"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Portfolio" />
+    <meta
+      name="og:description"
+      content="Front-end developer excited to collaborate with teams that share my passion for programming, strive to promote personal growth, and seek to use their skills to make a positive impact through the development of innovative products and services."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dbs2uhton/image/upload/v1686791156/backgroundPortfolio_bsc19e.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1700" />
+    <meta property="og:image:height" content="1700" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Front-end developer excited to collaborate with teams that share my passion for programming, strive to promote personal growth, and seek to use their skills to make a positive impact through the development of innovative products and services."
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/dbs2uhton/image/upload/v1686791156/backgroundPortfolio_bsc19e.png"
+    />
   </head>
   <body>
     <div id="app"></div>
