chore: add viewport meta data

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/webp" href="/src/assets/bulbsum.webp" />
     <title>Bulbsum</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="og:site_name" content="Gerardo Garcia" />
     <meta
       name="description"
